[package]
name = "ref_wrapper"
version = "0.2.2"
authors = ["Nossie531"]
edition = "2021"
description = "Wrapper of dynamically borrowed data."
repository = "https://github.com/nossie531/ref_wrapper"
license = "MIT OR Apache-2.0"
keywords = ["Ref", "RefMut", "RefCell", "Iterator"]
categories = ["no-std", "rust-patterns"]

[dev-dependencies]
drop_tracer = "0.1"
